Fix: all (or most) embed types and VC spacing

--- a/src/channels/_public-channels.scss
+++ b/src/channels/_public-channels.scss
@@ -245,7 +245,9 @@
 			transform: scaleX(1);
 		}
 	}
-
+}
+.list_a478e5 { //Container that holds users in the VC
+	margin-top: 1.5px; //fix for some awkward bumping between the borders
 }
 
 // Voice channel limits
